Layout - Terceira tela finalizada

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -27,6 +27,7 @@ h2{
 	box-sizing: border-box;
 	padding-left: 25px;
 	padding-right: 25px;
+	padding-bottom: 170px;
 }
 .pt-20{
 	padding-top: 20px;
