--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -35,3 +35,14 @@ h2{
 .pb-20{
 	padding-bottom: 20px;
 }
+.ml-10{
+	margin-left: 10px;
+}
+
+
+.loading{
+	height: 200px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
