--- a/src/components/home/style.css
+++ b/src/components/home/style.css
@@ -8,14 +8,17 @@
     box-shadow: 0px 2px 4px 2px rgba(0, 0, 0, 0.1);
     border-radius: 3px;
     padding: 5px;
-    height: 210px;
+    height: 300px;
     width: 45%;
+    max-width: 45%;
     display: flex;
     align-items: center;
     justify-content: center;
     margin-top: 10px;
+    box-sizing: border-box;
 }
 .movie-card img{
+    height: 100%;
     width: auto ;
-    max-height: 100%;
+    
 }
